--- a/foundry.toml
+++ b/foundry.toml
@@ -2,9 +2,6 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-
-[rpc_endpoints]
-lisk_testnet = "https://rpc.sepolia-api.lisk.com"
-lisk_mainnet = "https://rpc.lisk.com"
+via_ir = true
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
